kube/kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: ns_name
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
        project: phrases
    spec:
      containers:
      - name: frontend
        image: frontend:v1
        resources:
          limits:
            memory: "128Mi"
          requests:
            memory: "80Mi"
            cpu: "10m"
        ports:
        - containerPort: 8080
      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: kubernetes.io/hostname
        whenUnsatisfiable: DoNotSchedule
        labelSelector:
          matchLabels:
            app: frontend
      restartPolicy: Always
