kube/kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: ns_name
spec:
  selector:
    app: frontend
  ports:
  - port: 8080
    targetPort: 8080
  type: ClusterIP
