kube/kustomize/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend
  namespace: phrases
spec:
  hostnames:
  - phrases.local
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gateway
    namespace: gateway
    sectionName: http
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: frontend
      namespace: phrases
      port: 8080
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
  - backendRefs:
    - group: ""
      kind: Service
      name: frontend
      namespace: phrases
      port: 8080
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /metrics
